<resources>
    <string name="app_name">T-Grab</string>
    <string name="open">open</string>
    <string name="close">close</string>

    <string name="todo">TODO</string>
    <string name="login_to_t_grab">Login to</string>
    <string name="name">Name</string>
    <string name="your_email">Your Email</string>
    <string name="email_gmail_com">Email@gmail.com</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="register_to">Register to</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="as">As</string>
    <string name="select">Select</string>
    <string name="next">Next</string>
    <string name="welcome_to">Welcome to</string>
    <string name="what_is_your_name">What is your name?</string>
    <string name="full_name">Full Name</string>
    <string name="gender">Gender</string>
    <string name="welcome">Welcome</string>
    <string name="what_is_your_mobile_number">What is your mobile number?</string>
    <string name="sample_num">9638457899</string>
    <string name="get_otp">Get OTP</string>
    <string name="valid_text">With a valid number, you can access rides, deliveries and our other services</string>
    <string name="OTP_info">We will send you an one time OTP on this given mobile number</string>
    <string name="verify_text">Enter six digit number to verify your phone number</string>
    <string name="submit">Submit</string>
    <string name="location_access_is_important">Location Access is Important</string>
    <string name="location_info">Ride pick-up and other services will be faster and more accurate. We can also better ensure your safety</string>
    <string name="tell_us_where_you_are">Tell us where you are!</string>
    <string name="click_icon_to_add_your_location">Click icon to add your location</string>
    <string name="para_tricycle">PARA Tricycle</string>
    <string name="para_grocery">PARA Grocery</string>
    <string name="para_deliver">PARA Deliver</string>
    <string name="para_emergency">PARA Emergency</string>
    <string name="para_booking">PARA Booking</string>
    <string name="groceries_you_may_like">Groceries you may like</string>
    <string name="gaisano_capital_san_jose">Gaisano Capital San Jose</string>
    <string name="hap_seng_suki_mart_san_jose">HAP SENG Suki Mart San Jose</string>
    <string name="unimart_san_jose">UNIMART San Jose</string>
    <string name="my_location">Find your Driver</string>
    <string name="title_activity_driver_map">driver_map</string>
    <string name="logout">Logout</string>
    <string name="find_available_tricyle">Find Available Tricyle</string>
    <string name="username">Username</string>
    <string name="me">Me</string>
    <string name="overview">Overview</string>
    <string name="history">History</string>
    <string name="location">Location</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="book_now">Book Now</string>
    <string name="enter_destination">Enter Destination</string>
    <string name="destination">Destination</string>
    <string name="enter_date_of_departure">Enter Date of Departure</string>
    <string name="_11_10_98">11/10/98</string>
    <string name="list_of_tricycle">List of Tricycle</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="emergency">Emergency</string>
    <string name="lgu_san_jose">MHO</string>
    <string name="_09688557805">09688557805</string>
    <string name="bfp">BFP</string>
    <string name="_09156031550">09156031550</string>
    <string name="pnp">PNP</string>
    <string name="_09399232001">09399232001</string>
    <string name="bjmp">BJMP</string>
    <string name="_09369840394">09369840394</string>
    <string name="army">Army</string>
    <string name="_09955583150">09955583150</string>
    <string name="edetails">An emergency is a situation that poses an immediate risk to health, life, property, or environment.</string>
    <string name="red_cross">Red Cross</string>
    <string name="_09278824283">09278824283</string>
    <string name="online">Go Online</string>
    <string name="list_of_booking">List of Booking</string>
    <string name="no_booking_available">No Data Found!</string>
    <string name="send_message">Send Message</string>
    <string name="write_message">Write message...</string>
    <string name="notification">Notification</string>
    <string name="accepted_your_request">Your Request is Accepted</string>
    <string name="see_message">See Message</string>
    <string name="message_from_driver">Message from Driver</string>
    <string name="message_is_here">message is here</string>
    <string name="developers">About</string>
    <string name="about">About</string>
    <string name="researchers">Researchers</string>
    <string name="lyka_marielle_ramirez">Lyka Marielle Ramirez</string>
    <string name="vanessa_gamboa">Vanessa Gamboa</string>
    <string name="marivel_dela_cruz">Marivel Dela Cruz</string>
    <string name="jessabelle_lumogda">Jessabelle Lumogda</string>
    <string name="glen_homer_dadaya">Glen Homer Dadaya</string>
</resources>