<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register_activity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="170dp"
            android:src="@drawable/logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/todo"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo"
            android:orientation="horizontal"
            android:id="@+id/login_layout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comfortaa_bold"
                android:text="@string/register_to"
                android:textSize="12pt"/>

            <TextView
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bungee_shade"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="12pt"
                android:letterSpacing=".2"
                android:textStyle="bold"
                android:id="@+id/app_name"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/input_layout"
            android:padding="20dp"
            android:layout_marginTop="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_layout"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_email"
                android:fontFamily="@font/comfortaa_bold"
                android:textSize="9pt"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:autofillHints="false"
                android:background="@drawable/input_border"
                android:fontFamily="@font/comfortaa"
                android:hint="@string/email_gmail_com"
                android:textColor="#0AC3FB"
                android:inputType="textEmailAddress"
                android:padding="20dp" />

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:fontFamily="@font/comfortaa_bold"
                android:textSize="9pt"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:autofillHints="false"
                android:background="@drawable/input_border"
                android:fontFamily="@font/comfortaa"
                android:hint="@string/password"
                android:textColor="#0AC3FB"
                android:inputType="textPassword"
                android:padding="20dp" />

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_password"
                android:fontFamily="@font/comfortaa_bold"
                android:textSize="9pt"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:autofillHints="false"
                android:background="@drawable/input_border"
                android:fontFamily="@font/comfortaa"
                android:hint="@string/confirm_password"
                android:textColor="#0AC3FB"
                android:inputType="textPassword"
                android:padding="20dp" />

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/signup_btn"
            android:layout_width="0dp"
            android:layout_height="60dp"
            app:cardBackgroundColor="#0AC3FB"
            app:layout_constraintTop_toBottomOf="@id/input_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            app:cardCornerRadius="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:fontFamily="@font/comfortaa_bold"
                android:layout_gravity="center"
                android:textSize="12pt"
                android:textColor="@color/white"
                android:textStyle="bold"/>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:padding="10dp"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signup_btn">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:fontFamily="@font/comfortaa"
                android:textSize="8pt"/>

            <TextView
                android:id="@+id/login_btn"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:fontFamily="@font/comfortaa"
                android:textColor="#0AC3FB"
                android:textSize="8pt"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>