<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".booking_activity">

    <include
        android:id="@+id/main_page_toolbar"
        layout="@layout/booking_toolbar"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">
    </include>

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_page_toolbar"
        android:gravity="center_vertical"
        android:padding="20dp"
        android:background="#0AC3FB"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa"
            android:letterSpacing=".3"
            android:text="@string/book_now"
            android:textColor="@color/white"
            android:textSize="12pt"
            android:textStyle="bold" />

        <ImageView
            android:layout_marginStart="10dp"
            android:id="@+id/logo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/todo"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:padding="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_your_name"
                    android:textSize="10pt"
                    android:fontFamily="@font/comfortaa"
                    android:textColor="@color/black"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:backgroundTint="#0AC3FB"
                    android:layout_marginTop="10dp"
                    android:hint="@string/name"
                    android:padding="10dp"
                    android:textSize="9pt"
                    android:fontFamily="@font/comfortaa"
                    android:inputType="text"
                    android:id="@+id/name_input"
                    android:autofillHints="no" />

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number"
                    android:textSize="10pt"
                    android:fontFamily="@font/comfortaa"
                    android:textColor="@color/black"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:backgroundTint="#0AC3FB"
                    android:layout_marginTop="10dp"
                    android:hint="@string/phone_number"
                    android:padding="10dp"
                    android:textSize="9pt"
                    android:fontFamily="@font/comfortaa"
                    android:inputType="phone"
                    android:id="@+id/phone_input"
                    android:autofillHints="no" />

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_destination"
                    android:textSize="10pt"
                    android:fontFamily="@font/comfortaa"
                    android:textColor="@color/black"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:backgroundTint="#0AC3FB"
                    android:layout_marginTop="10dp"
                    android:hint="@string/destination"
                    android:padding="10dp"
                    android:textSize="9pt"
                    android:fontFamily="@font/comfortaa"
                    android:inputType="text"
                    android:id="@+id/destination_input"
                    android:autofillHints="no" />

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_date_of_departure"
                    android:textSize="10pt"
                    android:fontFamily="@font/comfortaa"
                    android:textColor="@color/black"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:backgroundTint="#0AC3FB"
                    android:layout_marginTop="10dp"
                    android:hint="@string/_11_10_98"
                    android:padding="10dp"
                    android:textSize="9pt"
                    android:fontFamily="@font/comfortaa"
                    android:inputType="date"
                    android:id="@+id/date_input"
                    android:autofillHints="no" />

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/book_btn"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                app:cardBackgroundColor="#0AC3FB"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="10dp">

                <TextView
                    android:letterSpacing=".3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/book_now"
                    android:layout_gravity="center"
                    android:textSize="12pt"
                    android:fontFamily="@font/comfortaa"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>