<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".passenger_information">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="170dp"
            android:src="@drawable/logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/todo"/>

        <LinearLayout
            android:id="@+id/welcome_layout"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_to"
                android:fontFamily="@font/comfortaa"
                android:textSize="12pt"/>

            <TextView
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bungee_shade"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="12pt"
                android:letterSpacing=".2"
                android:textStyle="bold"
                android:id="@+id/app_name"/>

        </LinearLayout>

        <LinearLayout
            android:padding="20dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/input_layout"
            app:layout_constraintTop_toBottomOf="@id/welcome_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/what_is_your_name"
                android:fontFamily="@font/comfortaa"
                android:textSize="10pt"/>

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:autofillHints="false"
                android:background="@drawable/input_border"
                android:fontFamily="@font/comfortaa"
                android:hint="@string/full_name"
                android:textColor="#0AC3FB"
                android:inputType="textEmailAddress"
                android:padding="20dp" />

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:fontFamily="@font/comfortaa"
                android:textSize="10pt"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:background="@drawable/input_border"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_marginStart="10dp"
                    android:id="@+id/who_text_spinner"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/comfortaa"
                    android:gravity="center_vertical"
                    android:textSize="8pt"
                    android:text="@string/select"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/who_spinner"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Spinner
                    android:id="@+id/who_spinner"
                    android:spinnerMode="dialog"
                    android:layoutMode="clipBounds"
                    android:overScrollMode="always"
                    android:focusableInTouchMode="true"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/who_text_spinner"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_marginTop="30dp"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintTop_toBottomOf="@id/input_layout"
            app:cardBackgroundColor="#0AC3FB"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/next_btn"
            app:cardCornerRadius="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:fontFamily="@font/comfortaa_bold"
                android:layout_gravity="center"
                android:textAllCaps="true"
                android:letterSpacing=".1"
                android:textColor="@color/white"
                android:textSize="11pt"
                android:textStyle="bold"
                />

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>