<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_marginTop="5dp"
        android:id="@+id/status"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:cardCornerRadius="10dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#0AC3FB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="120dp"
                android:id="@+id/fruit_picture"
                android:contentDescription="@string/todo"
                android:src="@drawable/logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/comfortaa"
                    android:letterSpacing=".2"
                    android:textColor="@color/white"
                    android:text="@string/accepted_your_request"
                    android:textSize="6pt" />

                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/comfortaa"
                        android:letterSpacing=".2"
                        android:id="@+id/driver_name"
                        android:textColor="@color/white"
                        android:text="@string/name"
                        android:textSize="6pt" />

                </LinearLayout>

                <TextView
                    android:layout_gravity="end"
                    android:background="@drawable/border"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/comfortaa"
                    android:letterSpacing=".2"
                    android:id="@+id/driver_message"
                    android:textColor="#C30303"
                    android:text="@string/see_message"
                    android:textSize="6pt" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>